--- a/src/main/docker/Dockerfile-jdk8
+++ b/src/main/docker/Dockerfile-jdk8
@@ -1,6 +1,6 @@
-FROM maven:3.9.5-eclipse-temurin-11
+FROM maven:3.8.5-jdk-8
 
-ARG MCF_VERSION=2.26
+ARG MCF_VERSION=2.21
 ARG MCF_SOURCE_DIR=/usr/src/manifoldcf
 
 ARG ANT_VERSION=1.10.12
@@ -15,9 +15,10 @@ RUN wget --no-cookies http://archive.apache.org/dist/ant/binaries/apache-ant-${A
     && tar -zvxf apache-ant-${ANT_VERSION}-bin.tar.gz -C /opt/ \
     && ln -s /opt/apache-ant-${ANT_VERSION} /opt/ant \
     && rm -f apache-ant-${ANT_VERSION}-bin.tar.gz \
-    && rm -f apache-ant-${ANT_VERSION}-bin.tar.gz.sha512 \
-    && update-alternatives --install "/usr/bin/ant" "ant" "/opt/ant/bin/ant" 1 \
-    && update-alternatives --set "ant" "/opt/ant/bin/ant"
+    && rm -f apache-ant-${ANT_VERSION}-bin.tar.gz.sha512
+
+RUN update-alternatives --install "/usr/bin/ant" "ant" "/opt/ant/bin/ant" 1 && \
+    update-alternatives --set "ant" "/opt/ant/bin/ant"
 
 #RUN wget --no-check-certificate https://dlcdn.apache.org/manifoldcf/apache-manifoldcf-${MCF_VERSION}/apache-manifoldcf-${MCF_VERSION}-src.tar.gz && \
 RUN wget ${MCF_DIST_URL}/apache-manifoldcf-${MCF_VERSION}/apache-manifoldcf-${MCF_VERSION}-src.tar.gz && \
