--- a/mcf-docker-overlay/src/main/docker/Dockerfile
+++ b/mcf-docker-overlay/src/main/docker/Dockerfile
@@ -10,8 +10,8 @@ ARG MCF_GROUP_ID=100002
 
 ARG APP_DIR=/usr/share/manifoldcf
 
-RUN apt-get update && apt-get install -y iputils-ping
-RUN apt-get update && apt-get install -y dnsutils
+RUN apt-get update && apt-get install -y iputils-ping && \
+	apt-get update && apt-get install -y dnsutils
 
 RUN wget https://dlcdn.apache.org/manifoldcf/apache-manifoldcf-${MCF_VERSION}/apache-manifoldcf-${MCF_VERSION}-bin.tar.gz && \
     tar -xzvf apache-manifoldcf-${MCF_VERSION}-bin.tar.gz && \
@@ -23,8 +23,8 @@ COPY properties.xml ${APP_DIR}/example
 COPY extensions/mcf-extensions-jar-${project.version}.jar ${APP_DIR}/connector-lib
 
 RUN set -ex; \
-  groupadd -r --gid "$MCF_GROUP_ID" "$MCF_GROUP"; \
-  useradd -r --uid "$MCF_USER_ID" --gid "$MCF_GROUP_ID" "$MCF_USER"
+    groupadd -r --gid "$MCF_GROUP_ID" "$MCF_GROUP"; \
+    useradd -r --uid "$MCF_USER_ID" --gid "$MCF_GROUP_ID" "$MCF_USER"
 
 RUN chown ${MCF_USER}:${MCF_USER} -R ${APP_DIR}
 RUN chmod +x ${APP_DIR}/example/start.sh
