--- a/mcf-docker-overlay/pom.xml
+++ b/mcf-docker-overlay/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.apache.manifoldcf</groupId>
 		<artifactId>mcf-sdk</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
