--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.apache.manifoldcf</groupId>
 	<artifactId>mcf-sdk</artifactId>
 	<name>Apache ManifoldCF SDK</name>
-	<version>0.0.3</version>
+	<version>0.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<properties>
