--- a/mcf-extensions-jar/pom.xml
+++ b/mcf-extensions-jar/pom.xml
@@ -7,12 +7,8 @@
 	<parent>
 		<groupId>org.apache.manifoldcf</groupId>
 		<artifactId>mcf-sdk</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.0.4</version>
 	</parent>
-
-	<properties>
-		
-	</properties>
 
 	<dependencyManagement>
 		<dependencies>
