--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.apache.manifoldcf</groupId>
 	<artifactId>mcf-sdk</artifactId>
 	<name>Apache ManifoldCF SDK</name>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<packaging>pom</packaging>
 	
 	<properties>
@@ -19,6 +19,7 @@
 		<maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
 		<maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
 		<maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
+		<maven.lifecycle.mapping.plugin.version>1.0.0</maven.lifecycle.mapping.plugin.version>
 		<postgresql.version>13.1</postgresql.version>
 	</properties>
 
